前端用vue重构后的完整版

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,5 +41,5 @@ logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-
-
+# ?????????????????????????
+spring.web.resources.add-mappings=false
